# azure-spatial-anchors-samples

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
Android/Java/: README.md  build.gradle  gradle.properties
Android/NDK/: README.md  build.gradle
Android/NDK/app/: CMakeLists.txt  build.gradle
Android/NDK/app/src/main/: AndroidManifest.xml
Android/NDK/app/src/main/assets/shaders/: camera.frag  camera.vert  cube.frag  cube.vert
Android/NDK/app/src/main/cpp/: AzureSpatialAnchorsApplication.cpp  AzureSpatialAnchorsApplication.h  CameraRenderer.cpp  CameraRenderer.h  CubeRenderer.cpp  CubeRenderer.h  JniInterface.cpp  Util.cpp  Util.h
Android/NDK/app/src/main/java/com/microsoft/samplenativeandroid/: JniInterface.java  MainActivity.java  SensorPermissionsHelper.java
Android/NDK/app/src/main/res/layout/: activity_main.xml
Android/NDK/app/src/main/res/values/: strings.xml
HoloLens/DirectX/: .gitignore  NuGet.Config  README.md  SampleHoloLens.sln
Sharing/SharingServiceSample/: .gitignore  Dockerfile  Program.cs  README.md  SharingService.csproj  SharingService.sln  Startup.cs  appsettings.json
Unity/: .gitignore  README.md
Unity/ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  PackageManagerSettings.asset  ProjectSettings.asset  QualitySettings.asset  TagManager.asset
Unity/UIElementsSchema/: UIElements.xsd  UnityEditor.PackageManager.UI.xsd  UnityEditor.Rendering.LookDev.xsd  UnityEditor.ShaderGraph.Drawing.xsd  UnityEditor.UIElements.Debugger.xsd  UnityEditor.UIElements.xsd  UnityEngine.UIElements.xsd
Xamarin/: .gitignore  NuGet.Config  SampleXamarin.sln
Xamarin/SampleXamarin.Android/: ActionSelectionFragment.cs  AnchorCreationFragment.cs  AnchorPlacementFragment.cs  AnchorVisual.cs  (+15 more)
(+344 files in other folders)
